--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
         rows="10"
         placeholder="Enter description"
       ></textarea>
-      <button id="btn">Saqlash</button>
+      <div class="gredient">
+      <button class="button" id="btn">Saqlash</button>
+      </div>
     </div>
 
     <table class="table">
